force-app/main/default/objects/Email_Failure_Log__c/Email_Failure_Log__c.object-meta.xml
<CustomObject>
    <label>Email Failure Log</label>
    <nameField>
        <label>Email Failure Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Failure Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>