force-app/main/default/objects/Email_Failure_Log__c/fields/Intake_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Intake_User_Email__c</fullName>
    <label>Intake User Email</label>
    <type>Email</type>
</CustomField>