force-app/main/default/objects/Email_Failure_Log__c/fields/Notes_for_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Follow_up__c</fullName>
    <label>Notes for Follow-up</label>
    <type>TextArea</type>
</CustomField>