force-app/main/default/objects/Email_Failure_Log__c/fields/Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_ID__c</fullName>
    <label>Prospect ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>