force-app/main/default/objects/Email_Failure_Log__c/fields/Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Name__c</fullName>
    <label>Prospect Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>